# roguey-sdl

./: CMakeLists.txt  main.cpp
assets/graphics/: sprites.json
assets/levels/: test.json
core/: CMakeLists.txt
core/include/core/: Color.h  Drawable.h  Game.h  Level.h
core/include/core/services/: AssetLoader.h  LevelLoader.h  TextureLoader.h  TilesetLoader.h
core/include/core/systems/: FrameTimerSystem.h  InputSystem.h  LevelRenderSystem.h  RenderSystem.h  WindowSystem.h
core/src/: Drawable.cpp  Game.cpp  Level.cpp
core/src/services/: AssetLoader.cpp  LevelLoader.cpp  TextureLoader.cpp  TilesetLoader.cpp
core/src/systems/: FrameTimerSystem.cpp  InputSystem.cpp  LevelRenderSystem.cpp  RenderSystem.cpp  WindowSystem.cpp
desktop/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
src/roguey/: Game.cpp  Game.h
src/roguey/services/: AssetLoader.cpp  AssetLoader.h
src/roguey/systems/: FrameTimerSystem.cpp  FrameTimerSystem.h  InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h  WindowSystem.cpp  WindowSystem.h
test/: CMakeLists.txt
test/assets/: test-level.json  test-tileset.json
test/roguey/: LevelLoaderTest.cpp
test/src/: LevelLoaderTest.cpp  Test.cpp  TilesetLoaderTest.cpp
